stop/delete API
